# pico_relay_controler

./: CMakeLists.txt  README.md  usb-relay-controler.c  usb-relay-controler.h  usb-relay-controler.uf2
Test Utilities/: linux_rly02.c  linux_usb_opto_rly88.c  linux_usbrly08.c  relay_test.py
Test Utilities/relay module test/: Relay module test.application
Test Utilities/relay module test/Application Files/Relay module test_1_0_0_7/: Relay module test.exe.deploy  Relay module test.exe.manifest
modules/: cmd-interface - Copy.c  cmd-interface - Copy.h  cmd-interface.c  cmd-interface.h
